--- a/website/pages/docs/components/card.mdx
+++ b/website/pages/docs/components/card.mdx
@@ -4,14 +4,14 @@ section: Components
 slug: /docs/components/card/
 ---
 
-import { Box, Button, Card, Image, Text, Spacer } from 'camara';
+import { Box, Button, Card, Image, Text, Spacer, CamaraTheme } from 'camara';
 import { LiveConfig } from 'smooth-doc/components';
 
 <!-- Define `camara` module as `{ Card }` -->
 
 <LiveConfig
   modules={{
-    camara: { Box, Button, Card, Image, Text, Spacer },
+    camara: { Box, Button, Card, Image, Text, Spacer, CamaraTheme },
   }}
 />
 
@@ -39,40 +39,40 @@ Card properties
 ### Elevate
 
 ```jsx live noInline
-import { Button, Card, Image, Text } from 'camara';
+import { Button, Card, Image, Text, CamaraTheme } from 'camara';
 
 render(
-  <>
+  <CamaraTheme>
     <Card elevate>
       <Image
-        imageUrl='https://source.unsplash.com/V_WBdOLOgJU/400x300'
-        imageAlt='woman in orange knit cap and blue jacket'
+        imageUrl="https://source.unsplash.com/V_WBdOLOgJU/400x300"
+        imageAlt="woman in orange knit cap and blue jacket"
       />
       <Text>John Doe</Text>
-      <Button block pill size='large'>
+      <Button block pill size="large">
         Follow
       </Button>
     </Card>
-  </>
+  </CamaraTheme>
 );
 ```
 
 ### Bordered
 
 ```jsx live noInline
-import { Box, Button, Card, Image, Text, Spacer } from 'camara';
+import { Box, Button, Card, Image, Text, Spacer, CamaraTheme } from 'camara';
 
 render(
-  <>
+  <CamaraTheme>
     <Box>
       <Box>
         <Card>
           <Image
-            imageUrl='https://source.unsplash.com/V_WBdOLOgJU/400x300'
-            imageAlt='woman in orange knit cap and blue jacket'
+            imageUrl="https://source.unsplash.com/V_WBdOLOgJU/400x300"
+            imageAlt="woman in orange knit cap and blue jacket"
           />
           <Text>John Doe</Text>
-          <Button block pill size='large'>
+          <Button block pill size="large">
             Follow
           </Button>
         </Card>
@@ -82,17 +82,17 @@ render(
         <Box>
           <Card bordered={false}>
             <Image
-              imageUrl='https://source.unsplash.com/V_WBdOLOgJU/400x300'
-              imageAlt='woman in orange knit cap and blue jacket'
+              imageUrl="https://source.unsplash.com/V_WBdOLOgJU/400x300"
+              imageAlt="woman in orange knit cap and blue jacket"
             />
             <Text>John Doe</Text>
-            <Button block pill size='large'>
+            <Button block pill size="large">
               Follow
             </Button>
           </Card>
         </Box>
       </Spacer>
     </Box>
-  </>
+  </CamaraTheme>
 );
 ```
