--- a/website/pages/docs/components/box.mdx
+++ b/website/pages/docs/components/box.mdx
@@ -4,14 +4,14 @@ section: Components
 slug: /docs/components/box/
 ---
 
-import { Box, Flex, Image } from 'camara';
+import { Box, Flex, Image, CamaraTheme } from 'camara';
 import { LiveConfig } from 'smooth-doc/components';
 
 <!-- Define `camara` module as `{ Box }` -->
 
 <LiveConfig
   modules={{
-    camara: { Box, Flex, Image },
+    camara: { Box, Flex, Image, CamaraTheme },
   }}
 />
 
@@ -62,88 +62,88 @@ Box properties
 ### Basic Box
 
 ```jsx live noInline
-import { Box, Flex } from 'camara';
+import { Box, Flex, CamaraTheme } from 'camara';
 
 render(
-  <>
+  <CamaraTheme>
     <Box width={700}>
-      <Box height={100} color='#82CAFF' />
-      <Flex justify='space-between'>
-        <Box height={100} width={200} color='#82CAFF' />
-        <Box height={100} width={300} color='#1589FF' />
-        <Box height={100} width={200} color='#82CAFF' />
+      <Box height={100} color="#82CAFF" />
+      <Flex justify="space-between">
+        <Box height={100} width={200} color="#82CAFF" />
+        <Box height={100} width={300} color="#1589FF" />
+        <Box height={100} width={200} color="#82CAFF" />
       </Flex>
-      <Box height={100} color='#82CAFF' />
+      <Box height={100} color="#82CAFF" />
     </Box>
-  </>
+  </CamaraTheme>
 );
 ```
 
 ### Border
 
 ```jsx live noInline
-import { Box, Flex } from 'camara';
+import { Box, Flex, CamaraTheme } from 'camara';
 
 render(
-  <>
+  <CamaraTheme>
     <Box width={700}>
-      <Box border height={100} color='#82CAFF' />
-      <Flex justify='space-between'>
-        <Box border height={100} width={200} color='#82CAFF' />
-        <Box height={100} width={300} color='#1589FF' />
-        <Box border height={100} width={200} color='#82CAFF' />
+      <Box border height={100} color="#82CAFF" />
+      <Flex justify="space-between">
+        <Box border height={100} width={200} color="#82CAFF" />
+        <Box height={100} width={300} color="#1589FF" />
+        <Box border height={100} width={200} color="#82CAFF" />
       </Flex>
-      <Box border height={100} color='#82CAFF' />
+      <Box border height={100} color="#82CAFF" />
     </Box>
-  </>
+  </CamaraTheme>
 );
 ```
 
 ### Center
 
 ```jsx live noInline
-import { Box, Flex, Image } from 'camara';
+import { Box, Flex, Image, CamaraTheme } from 'camara';
 
 render(
-  <>
+  <CamaraTheme>
     <Box width={700}>
-      <Box border height={100} color='#82CAFF' />
-      <Flex justify='space-between'>
-        <Box border height={100} width={200} color='#82CAFF' />
-        <Box height={100} width={300} color='#1589FF'>
+      <Box border height={100} color="#82CAFF" />
+      <Flex justify="space-between">
+        <Box border height={100} width={200} color="#82CAFF" />
+        <Box height={100} width={300} color="#1589FF">
           <Box center my={10} width={100} height={80}>
             <Image
-              width='100%'
-              imageUrl='https://source.unsplash.com/V_WBdOLOgJU/200x100'
-              imageAlt='woman in orange knit cap and blue jacket'
+              width="100%"
+              imageUrl="https://source.unsplash.com/V_WBdOLOgJU/200x100"
+              imageAlt="woman in orange knit cap and blue jacket"
             />
           </Box>
         </Box>
-        <Box border height={100} width={200} color='#82CAFF' />
+        <Box border height={100} width={200} color="#82CAFF" />
       </Flex>
-      <Box border height={100} color='#82CAFF' />
+      <Box border height={100} color="#82CAFF" />
     </Box>
-  </>
+  </CamaraTheme>
 );
 ```
 
 ### Debug
 
 ```jsx live noInline
-import { Box, Flex } from 'camara';
+import { Box, Flex, CamaraTheme } from 'camara';
 
 render(
-  <>
+  <CamaraTheme>
     <Box width={700}>
-      <Box border height={100} color='#82CAFF' />
-      <Flex justify='space-between'>
-        <Box border height={100} width={200} color='#82CAFF' />
-        <Box debug height={100} width={300} color='#1589FF' />
-        <Box height={100} width={200} color='#82CAFF' />
+      <Box border height={100} color="#82CAFF" />
+      <Flex justify="space-between">
+        <Box border height={100} width={200} color="#82CAFF" />
+        <Box debug height={100} width={300} color="#1589FF" />
+        <Box height={100} width={200} color="#82CAFF" />
       </Flex>
-      <Box border height={100} color='#82CAFF' />
+      <Box border height={100} color="#82CAFF" />
     </Box>
-  </>
+  </CamaraTheme>
 );
 ```
 
@@ -152,14 +152,14 @@ render(
 #### Top, Bottom, Left and Right Padding
 
 ```jsx live noInline
-import { Box, Flex } from 'camara';
+import { Box, Flex, CamaraTheme } from 'camara';
 
 render(
-  <>
+  <CamaraTheme>
     <Box width={700}>
-      <Box border height={100} color='#82CAFF' />
-      <Flex justify='space-between'>
-        <Box border height={100} width={200} color='#82CAFF' />
+      <Box border height={100} color="#82CAFF" />
+      <Flex justify="space-between">
+        <Box border height={100} width={200} color="#82CAFF" />
         <Box
           pt={16}
           pb={16}
@@ -167,33 +167,33 @@ render(
           pr={16}
           height={100}
           width={300}
-          color='#1589FF'
+          color="#1589FF"
         />
-        <Box height={100} width={200} color='#82CAFF' />
+        <Box height={100} width={200} color="#82CAFF" />
       </Flex>
-      <Box border height={100} color='#82CAFF' />
+      <Box border height={100} color="#82CAFF" />
     </Box>
-  </>
+  </CamaraTheme>
 );
 ```
 
 #### Horizontal and Vertical Padding
 
 ```jsx live noInline
-import { Box, Flex } from 'camara';
+import { Box, Flex, CamaraTheme } from 'camara';
 
 render(
-  <>
+  <CamaraTheme>
     <Box width={700}>
-      <Box border height={100} color='#82CAFF' />
-      <Flex justify='space-between'>
-        <Box border height={100} width={200} color='#82CAFF' />
-        <Box px={16} py={40} height={100} width={300} color='#1589FF' />
-        <Box height={100} width={200} color='#82CAFF' />
+      <Box border height={100} color="#82CAFF" />
+      <Flex justify="space-between">
+        <Box border height={100} width={200} color="#82CAFF" />
+        <Box px={16} py={40} height={100} width={300} color="#1589FF" />
+        <Box height={100} width={200} color="#82CAFF" />
       </Flex>
-      <Box border height={100} color='#82CAFF' />
+      <Box border height={100} color="#82CAFF" />
     </Box>
-  </>
+  </CamaraTheme>
 );
 ```
 
@@ -202,14 +202,14 @@ render(
 #### Top, Bottom, Left and Right Margin
 
 ```jsx live noInline
-import { Box, Flex } from 'camara';
+import { Box, Flex, CamaraTheme } from 'camara';
 
 render(
-  <>
+  <CamaraTheme>
     <Box width={700}>
-      <Box border height={100} color='#82CAFF' />
-      <Flex justify='space-between'>
-        <Box py={16} border height={100} width={200} color='#82CAFF' />
+      <Box border height={100} color="#82CAFF" />
+      <Flex justify="space-between">
+        <Box py={16} border height={100} width={200} color="#82CAFF" />
         <Box
           mt={16}
           mb={16}
@@ -217,32 +217,32 @@ render(
           mr={16}
           height={100}
           width={300}
-          color='#1589FF'
+          color="#1589FF"
         />
-        <Box py={16} height={100} width={200} color='#82CAFF' />
+        <Box py={16} height={100} width={200} color="#82CAFF" />
       </Flex>
-      <Box border height={100} color='#82CAFF' />
+      <Box border height={100} color="#82CAFF" />
     </Box>
-  </>
+  </CamaraTheme>
 );
 ```
 
 #### Horizontal and Vertical Margin
 
 ```jsx live noInline
-import { Box, Flex } from 'camara';
+import { Box, Flex, CamaraTheme } from 'camara';
 
 render(
-  <>
+  <CamaraTheme>
     <Box width={700}>
-      <Box border height={100} color='#82CAFF' />
-      <Flex justify='space-between'>
-        <Box py={16} border height={100} width={200} color='#82CAFF' />
-        <Box mx={32} my={16} height={100} width={300} color='#1589FF' />
-        <Box py={16} height={100} width={200} color='#82CAFF' />
+      <Box border height={100} color="#82CAFF" />
+      <Flex justify="space-between">
+        <Box py={16} border height={100} width={200} color="#82CAFF" />
+        <Box mx={32} my={16} height={100} width={300} color="#1589FF" />
+        <Box py={16} height={100} width={200} color="#82CAFF" />
       </Flex>
-      <Box border height={100} color='#82CAFF' />
+      <Box border height={100} color="#82CAFF" />
     </Box>
-  </>
+  </CamaraTheme>
 );
 ```
