--- a/website/pages/docs/components/image.mdx
+++ b/website/pages/docs/components/image.mdx
@@ -4,14 +4,14 @@ section: Components
 slug: /docs/components/image/
 ---
 
-import { Flex, Image } from 'camara';
+import { Flex, Image, CamaraTheme } from 'camara';
 import { LiveConfig } from 'smooth-doc/components';
 
 <!-- Define `camara` module as `{ Image }` -->
 
 <LiveConfig
   modules={{
-    camara: { Flex, Image },
+    camara: { Flex, Image, CamaraTheme },
   }}
 />
 
@@ -39,40 +39,40 @@ Image properties
 ### Basic Image
 
 ```jsx live noInline
-import { Image } from 'camara';
+import { Image, CamaraTheme } from 'camara';
 
 render(
-  <>
+  <CamaraTheme>
     <Image
-      imageUrl='https://source.unsplash.com/V_WBdOLOgJU/600x500'
-      imageAlt='woman in orange knit cap and blue jacket'
+      imageUrl="https://source.unsplash.com/V_WBdOLOgJU/600x500"
+      imageAlt="woman in orange knit cap and blue jacket"
     />
-  </>
+  </CamaraTheme>
 );
 ```
 
 ### Loading
 
 ```jsx live noInline
-import { Flex, Image } from 'camara';
+import { Flex, Image, CamaraTheme } from 'camara';
 
 render(
-  <>
-    <Flex justify='space-between'>
+  <CamaraTheme>
+    <Flex justify="space-between">
       <Image
-        width='49%'
-        imageUrl='https://source.unsplash.com/V_WBdOLOgJU/400x300'
-        imageAlt='woman in orange knit cap and blue jacket'
-        loading='eager'
+        width="49%"
+        imageUrl="https://source.unsplash.com/V_WBdOLOgJU/400x300"
+        imageAlt="woman in orange knit cap and blue jacket"
+        loading="eager"
       />
 
       <Image
-        width='49%'
-        imageUrl='https://source.unsplash.com/V_WBdOLOgJU/400x300'
-        imageAlt='woman in orange knit cap and blue jacket'
-        loading='lazy'
+        width="49%"
+        imageUrl="https://source.unsplash.com/V_WBdOLOgJU/400x300"
+        imageAlt="woman in orange knit cap and blue jacket"
+        loading="lazy"
       />
     </Flex>
-  </>
+  </CamaraTheme>
 );
 ```
