--- a/website/pages/docs/components/inputField.mdx
+++ b/website/pages/docs/components/inputField.mdx
@@ -4,14 +4,14 @@ section: Components
 slug: /docs/components/inputField/
 ---
 
-import { Box, Flex, InputField } from 'camara';
+import { Box, Flex, InputField, CamaraTheme } from 'camara';
 import { LiveConfig } from 'smooth-doc/components';
 
 <!-- Define `camara` module as `{ InputField }` -->
 
 <LiveConfig
   modules={{
-    camara: { Box, Flex, InputField },
+    camara: { Box, Flex, InputField, CamaraTheme },
   }}
 />
 
@@ -42,109 +42,109 @@ InputField properties
 ### Basic Input
 
 ```jsx live noInline
-import { InputField } from 'camara';
+import { InputField, CamaraTheme } from 'camara';
 
 render(
-  <>
-    <InputField placeholder='Type something here' />
-  </>
+  <CamaraTheme>
+    <InputField placeholder="Type something here" />
+  </CamaraTheme>
 );
 ```
 
 ### Block
 
 ```jsx live noInline
-import { Box, InputField } from 'camara';
+import { Box, InputField, CamaraTheme } from 'camara';
 
 render(
-  <>
+  <CamaraTheme>
     <Box>
-      <InputField label='First Name' />
-      <InputField label='Last Name' />
+      <InputField label="First Name" />
+      <InputField label="Last Name" />
     </Box>
-  </>
+  </CamaraTheme>
 );
 ```
 
 ### Inline
 
 ```jsx live noInline
-import { Flex, InputField } from 'camara';
+import { Flex, InputField, CamaraTheme } from 'camara';
 
 render(
-  <>
+  <CamaraTheme>
     <Flex>
-      <InputField inline label='First Name' />
-      <InputField inline label='Last Name' />
+      <InputField inline label="First Name" />
+      <InputField inline label="Last Name" />
     </Flex>
-  </>
+  </CamaraTheme>
 );
 ```
 
 ### Helper Text
 
 ```jsx live noInline
-import { Flex, InputField } from 'camara';
+import { Flex, InputField, CamaraTheme } from 'camara';
 
 render(
-  <>
+  <CamaraTheme>
     <Flex>
       <InputField
-        label='Email Address'
-        type='email'
-        helperText='example@gmail.com'
+        label="Email Address"
+        type="email"
+        helperText="example@gmail.com"
       />
       <InputField
-        label='Password'
-        type='password'
-        helperText='must contain special characters'
+        label="Password"
+        type="password"
+        helperText="must contain special characters"
       />
     </Flex>
-  </>
+  </CamaraTheme>
 );
 ```
 
 ### Required
 
 ```jsx live noInline
-import { Flex, InputField } from 'camara';
+import { Flex, InputField, CamaraTheme } from 'camara';
 
 render(
-  <>
+  <CamaraTheme>
     <Flex>
-      <InputField required label='First Name' />
-      <InputField required label='Last Name' />
+      <InputField required label="First Name" />
+      <InputField required label="Last Name" />
     </Flex>
-  </>
+  </CamaraTheme>
 );
 ```
 
 ### Hidden Label
 
 ```jsx live noInline
-import { Flex, InputField } from 'camara';
+import { Flex, InputField, CamaraTheme } from 'camara';
 
 render(
-  <>
+  <CamaraTheme>
     <Flex>
-      <InputField required placeholder='First Name' />
-      <InputField required placeholder='Last Name' />
+      <InputField required placeholder="First Name" />
+      <InputField required placeholder="Last Name" />
     </Flex>
-  </>
+  </CamaraTheme>
 );
 ```
 
 ### Disabled
 
 ```jsx live noInline
-import { Flex, InputField } from 'camara';
+import { Flex, InputField, CamaraTheme } from 'camara';
 
 render(
-  <>
+  <CamaraTheme>
     <Flex>
-      <InputField disabled required placeholder='First Name' />
-      <InputField disabled required placeholder='Last Name' />
+      <InputField disabled required placeholder="First Name" />
+      <InputField disabled required placeholder="Last Name" />
     </Flex>
-  </>
+  </CamaraTheme>
 );
 ```
